--- a/files/templates/price.html
+++ b/files/templates/price.html
@@ -12,7 +12,7 @@
             <td>{{ field.name }}</td>
 
             <td>{{ field.type_print }} </td>
-            <td>{{ field.price_shirka }} руб.</td>
+            <td>{{ field.price }} руб.</td>
         </tr>
         {% endfor %}
            </table>
@@ -27,7 +27,7 @@
         <tr>
             <td>{{ field.name }}</td>
             <td>{{ field.type_print }} </td>
-            <td>{{ field.price_interierka }} руб.</td>
+            <td>{{ field.price }} руб.</td>
         </tr>
         {% endfor %}
 
@@ -42,7 +42,7 @@
         <tr>
             <td>{{ field.name }}</td>
             <td>{{ field.type_print }} </td>
-            <td>{{ field.price_UV }} руб.</td>
+            <td>{{ field.price }} руб.</td>
         </tr>
         {% endfor %}
 
