edit base add My files

--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -18,7 +18,8 @@
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/create">Загрузить файл</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Загрузить архив</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/price">Прайс-лист</a>
-        <a class="py-2 link-body-emphasis text-decoration-none" href="/files_dl">Мои файлы</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none"  href="/files_dl">Все файлы</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none"  href="/">Мои файлы</a>
       </nav>
     </div>
 <div class="container">
