--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -11,6 +11,7 @@ or <a href="{% url 'password_change' %}">change your password</a>.
 <p><a href=" " >файлы для Широкоформатной печати</a></p>
 <p><a href=" " >файлы для Интерьерной печати</a></p>
 <p><a href=" " >файлы для УФ печати</a></p>
+<p><a href=" " >Добавить Организацию платильщик</a></p>
 
 {% endblock %}
 
