--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -27,6 +27,7 @@
 
             <td><a href="edit/{{product.id}}">Изменить</a>
                 <a href="delete/{{product.id}}">Удалить</a>
+                <a href="{{}}">Добавить в заказ</a>
                 <input type="checkbox" checked>
             </td>
         </tr>
