edit order items

--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -57,10 +57,11 @@
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>Ресурсы</h5>
+        <h5>Заказы</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Ресурс</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Имя ресурса</a></li>
+       <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/view_order">Заказы</a></li>
+
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/view_order_item">По заказу</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Другой ресурс</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Последний ресурс</a></li>
         </ul>
