--- a/account/templates/orders/order_form.html
+++ b/account/templates/orders/order_form.html
@@ -1,11 +1,11 @@
 {% extends 'base.html'%}
     <title>{% block title %} Новый заказ {% endblock %}</title>
 {% block body %}
-
+<h3>Добавить новый заказ</h3>
 <form method="post" , enctype="multipart/form-data">
 
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Сохранить</button>
+    <button type="submit">Добавить</button>
 </form>
 {% endblock %}
