--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -59,10 +59,10 @@
       <div class="col-6 col-md">
         <h5>Заказы</h5>
         <ul class="list-unstyled text-small">
-       <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/view_order">Заказы</a></li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/create/">Новый заказ</a></li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/view_order">Заказы</a></li>
 
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/view_order_item">По заказу</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Другой ресурс</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/createitem/">Добавить в заказ</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Последний ресурс</a></li>
         </ul>
       </div>
