--- a/orders/templates/all_files_in_order.html
+++ b/orders/templates/all_files_in_order.html
@@ -1,24 +1,20 @@
 {% extends 'base.html'%}
-<title>{% block title %} {{curent_order.id }} {% endblock %}</title>
+<title>{% block title %} {{curent_order.id}} {% endblock %}</title>
 {% block body %}
-
+<h3> Заказ № {{curent_order.id}}</h3>
     <table>
         <thead>
-           <th>Id</th><th>Картинка</th><th>Материал</th><th>Кол-во</th>
-           <th>Ширина</th><th>Длина</th><th>Стоимость</th><th>Дата</th>
+           <th>Платильщик</th><th>Оплата</th>
+           <th>Сумма</th><th>Статус</th><th>Дата</th>
        </thead>
 
 {% for order in Orders %}
         <tr>
-            <td>{{ order.id }}</td>
-<!--            <td>{{ product.images }}</td>-->
-<!--            <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>-->
-            <td>{{ order.total_price }}</td>
-            <td>{{ order.organisation_payer }} шт.</td>
+            <td>{{ order.organisation_payer }}</td>
             <td>{{ order.paid }} см.</td>
-            <td>{{ order.comments }} см.</td>
-            <td>{{ order.status }} руб.</td>
-            <td>{{ order.Contractor }}</td>
+            <td>{{ order.total_price }}</td>
+            <td>{{ order.status }}</td>
+            <td>{{ order.created }}</td>
 
 
             <td><a href="edit/{{product.id}}">Изменить</a>
@@ -35,17 +31,17 @@
            <th>Ширина</th><th>Длина</th><th>Стоимость</th><th>Дата</th>
        </thead>
 
-  {% for product in product %}
+  {% for item in items %}
         <tr>
             <td>{{ product.id }}</td>
 <!--            <td>{{ product.images }}</td>-->
-            <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ product.material }}</td>
-            <td>{{ product.quantity }} шт.</td>
-            <td>{{ product.width }} см.</td>
-            <td>{{ product.length }} см.</td>
-            <td>{{ product.price }} руб.</td>
-            <td>{{ product.created_at }}</td>
+<!--            <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>-->
+            <td>{{ item.order }}</td>
+            <td>{{ item.product }} шт.</td>
+            <td>{{ item.price_per_item }} см.</td>
+            <td>{{ item.quantity }} см.</td>
+            <td>{{ item.total_price }} руб.</td>
+            <td>{{ item.is_active }}</td>
 
 
             <td><a href="edit/{{product.id}}">Изменить</a>
