--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -60,7 +60,7 @@
         <h5>Заказы</h5>
         <ul class="list-unstyled text-small">
             <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/create/">Новый заказ</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/view_order">Заказы</a></li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/view_order">Мои заказы</a></li>
 
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/createitem/">Добавить в заказ</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Последний ресурс</a></li>
