view curent order

--- a/files/templates/product_update_form.html
+++ b/files/templates/product_update_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-<title>{% block title %} Прайс-лист на широкоформатную печать {% endblock %}</title>
+<title>{% block title %} Изменить {% endblock %}</title>
 {% block body %}
 
 {% block content %}
