--- a/orders/templates/all_files_in_order.html
+++ b/orders/templates/all_files_in_order.html
@@ -1,20 +1,22 @@
 {% extends 'base.html'%}
-<title>{% block title %} {{curent_order.id}} {% endblock %}</title>
+<title>{% block title %} {{curent_order}} {% endblock %}</title>
 {% block body %}
-<h3> Заказ № {{curent_order.id}}</h3>
+<h3> {{curent_order}}</h3>
     <table>
         <thead>
+        <th>Дата</th>
            <th>Платильщик</th><th>Оплата</th>
-           <th>Сумма</th><th>Статус</th><th>Дата</th>
+           <th>Сумма</th><th>Статус</th>
        </thead>
 
 {% for order in Orders %}
         <tr>
+            <td>{{ order.created }}</td>
             <td>{{ order.organisation_payer }}</td>
             <td>{{ order.paid }} см.</td>
             <td>{{ order.total_price }}</td>
             <td>{{ order.status }}</td>
-            <td>{{ order.created }}</td>
+
 
 
             <td><a href="edit/{{product.id}}">Оплатить</a>
@@ -33,7 +35,7 @@
   {% for item in items %}
         <tr>
 
-<!--            <td><a>{% load thumbnail %} <img src="{% thumbnail item.product 100x0 %}" class="image-detail"></a></td>-->
+            <td><a>{% load thumbnail %} <img src="{% thumbnail item.product 100x0 %}" class="image-detail"></a></td>
             <td>{{ item.product }}</td>
             <td>{{ item.quantity }}шт</td>
 
