add in model orders filds data complite

--- a/orders/templates/all_files_in_order.html
+++ b/orders/templates/all_files_in_order.html
@@ -39,7 +39,7 @@
             <td>{{ item.product }}</td>
             <td>{{ item.quantity }}шт</td>
 
-            <td>{{ item.price_per_item }}</td>
+            <td>{{ item.price_per_item }}  руб. </td>
             <td>{{ item.total_price }} руб.</td>
             <td>{{ item.is_active }}</td>
 
