--- a/orders/templates/view_orders_item.html
+++ b/orders/templates/view_orders_item.html
@@ -16,7 +16,7 @@
             <td>{{ order.id }}</td>
             <td>{{ order.order }}</td>
             <td>{{ order.product }} шт.</td>
-            <td>{{ order.price_per_item }} см.</td>
+            <td>{{ order.price_per_item }} </td>
             <td>{{ order.quantity }} см.</td>
             <td>{{ order.total_price }} руб.</td>
             <td>{{ order.is_active }}</td>
