--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -45,8 +45,8 @@
 <!--            <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>-->
             <td>{{ product.order }}</td>
             <td>{{ product.product }} шт.</td>
-            <td>{{ product.price_per_item }} см.</td>
-            <td>{{ product.quantity }} см.</td>
+            <td>{{ product.price_per_item }}</td>
+            <td>{{ product.quantity }}</td>
             <td>{{ product.total_price }} руб.</td>
             <td>{{ product.is_active }}</td>
 
@@ -54,7 +54,6 @@
             <td><a href="edit/{{product.id}}">Изменить</a>
                 <a href="delete/{{product.id}}">Удалить</a>
                 <a href="edit/{{product.id}}">Добавить в заказ</a>
-                <input type="checkbox" checked>
             </td>
         </tr>
         {% endfor %}
