add delete Order

--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -21,7 +21,8 @@
             <td>{{ order.status }} руб.</td>
             <td>{{ order.created }}</td>
             <td>{{ order.date_complete }}</td>
-            <td><a href="/orders/all_files_in_order/{{order.id}}">Детализация</a>
+            <td><a href="/orders/all_files_in_order/{{order.id}}">Детализация</a></td>
+            <td><a href="/orders/delete_order/{{order.id}}">Удалить</a></td>
 
 
             </td>
