--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -14,11 +14,11 @@
         {% for order in Orders %}
         <tr>
             <td>{{ order.id }}</td>
-            <td>{{ order.total_price }}</td>
-            <td>{{ order.organisation_payer }} шт.</td>
-            <td>{{ order.paid }} см.</td>
-            <td>{{ order.comments }} см.</td>
-            <td>{{ order.status }} руб.</td>
+            <td>{{ order.total_price }} руб. </td>
+            <td>{{ order.organisation_payer }}</td>
+            <td>{{ order.paid }}</td>
+            <td>{{ order.comments }}</td>
+            <td>{{ order.status }}</td>
             <td>{{ order.created }}</td>
             <td>{{ order.date_complete }}</td>
             <td><a href="/orders/all_files_in_order/{{order.id}}">Детализация</a></td>
