--- a/account/templates/orders/order_update_form.html
+++ b/account/templates/orders/order_update_form.html
@@ -2,13 +2,13 @@
 {% extends 'base.html'%}
     <title>{% block title %} Новый заказ {% endblock %}</title>
 {% block body %}
-<h3>Обновить новый заказ {{pk}}</h3>
+<h3>Офрмить новый заказ {{pk}}</h3>
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Оформить">
 </form>
 
-</form>
+
 
 
 {% endblock %}
