--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -28,18 +28,17 @@
 
     <table>
         <thead>
-           <th>Картинка</th><th>Кол-во</th><th>Цена</th>
-           <th>Итого</th><th>Статус</th>
+           <th>Картинка</th><th>Материал</th><th>Финишная обработка</th>
+           <th>Поля</th><th>Итого</th>
        </thead>
 
   {% for item in items %}
         <tr>
             <td><a>{% load thumbnail %} <img src="{% thumbnail item.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ item.Contractor }}</td>
-            <td>{{ item.images }}шт</td>
-<!--            <td>{{ item.price_per_item }}  руб. </td>-->
-<!--            <td>{{ item.total_price }} руб.</td>-->
-<!--            <td>{{ item.is_active }}</td>-->
+            <td>{{ item.material }}  руб. </td>
+            <td>{{ item.FinishWork }} руб.</td>
+            <td>{{ item.Fields }}</td>
+            <td>{{ item.price }}</td>
             <td><a href="pay/{{product.id}}">Удалить</a></td>
         </tr>
         {% endfor %}
