--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -57,8 +57,8 @@
             <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
             <td>{{ i.price_per_item }} руб.</td>
             <td>{{ i.quantity }}</td>
-            <td>{{ i.total_price }}</td>
-            <td><a href="ADD_item/{{product.id}}">Добавить в заказ</a></td>
+            <td>{{ i.total_price }} руб. </td>
+            <td><a href="ADD_item/{{product.id}}">Удалить</a></td>
         </tr>
         {% endfor %}
                     </table>
