prin-7 edit html files

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -4,7 +4,7 @@
 
 <h1>Dashboard</h1>
  <p>Welcome to your dashboard. You can <a href="{% url 'account:edit_profile' %}">edit your profile</a>
-or <a href="{% url 'account:password_change' %}">change your password</a>.
+or <a href="{% url 'account:password_change' %}">Сменить пароль</a>.
  </p>
 <p>
 
