--- a/orders/templates/all_files_in_order.html
+++ b/orders/templates/all_files_in_order.html
@@ -19,7 +19,7 @@
 
 
 
-            <td><a href="edit/{{product.id}}">Оплатить</a>
+            <td><a href="/orders/order_pay/{{order.id}}">Оплатить</a>
             </td>
         </tr>
         {% endfor %}
