--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -21,8 +21,9 @@
             <td>{{ order.status }}</td>
             <td>{{ order.created }}</td>
             <td>{{ order.date_complete }}</td>
-            <td><a href="/orders/all_files_in_order/{{order.id}}">Детализация</a></td>
-            <td><a href="/orders/delete_order/{{order.id}}">Удалить</a></td>
+            <td><a href="{% url 'orders:all_files_in_order' order.id %}">Детализация</a></td>
+            <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
+
 
 
             </td>
