--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -2,28 +2,30 @@
 <title>{% block title %} {{curent_order}} {% endblock %}</title>
 {% block body %}
 <h3> {{curent_order}}</h3>
-    <table>
+
+<table>
         <thead>
         <th>Дата</th>
            <th>Платильщик</th><th>Оплата</th>
            <th>Сумма</th><th>Статус</th>
        </thead>
 
-{% for order in Orders %}
         <tr>
-            <td>{{ order.created }}</td>
-            <td>{{ order.organisation_payer }}</td>
-            <td>{{ order.paid }} см.</td>
-            <td>{{ order.total_price }}</td>
-            <td>{{ order.status }}</td>
+            <td>{{ Orders.created }}</td>
+            <td>{{ Orders.organisation_payer }}</td>
+            <td>{{ Orders.paid }}</td>
+            <td>{{ Orders.total_price }}</td>
+            <td>{{ Orders.status }}</td>
 
 
 
             <td><a href="/orders/order_pay/{{order.id}}">Оплатить</a>
             </td>
         </tr>
-        {% endfor %}
             </table>
+
+
+
 <h5> Файлы которые можно добавить в заказ: </h5>
 
     <table>
@@ -39,7 +41,7 @@
             <td>{{ item.FinishWork }} руб.</td>
             <td>{{ item.Fields }}</td>
             <td>{{ item.price }}</td>
-            <td><a href="/orders/add/{{item.id}}">Добавить в заказ</a></td>
+            <td><a href="/orders/add_item_in_order/{{order_id}}/{{item.id}}">Добавить в заказ</a></td>
         </tr>
         {% endfor %}
                     </table>
@@ -52,13 +54,14 @@
            <th>Поля</th><th>Итого</th>
        </thead>
 
-  {% for i in items_in_order %}
+  {% for item in items_in_order %}
         <tr>
-            <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ i.price_per_item }} руб.</td>
-            <td>{{ i.quantity }}</td>
-            <td>{{ i.total_price }} руб. </td>
-            <td><a href="ADD_item/{{product.id}}">Удалить</a></td>
+            <td><a>{% load thumbnail %} <img src="{% thumbnail item.product.images 100x0 %}" class="image-detail"></a></td>
+            <td>{{ item.price_per_item }} руб.</td>
+            <td>{{ item.quantity }}</td>
+            <td>{{ item.total_price }} руб. </td>
+            <td>{{ item.id }} ID </td>
+            <td><a href="/orders/del_item_in_order/{{order_id}}/{{item.id}}">Удалить</a></td>
         </tr>
         {% endfor %}
                     </table>
