--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -23,7 +23,7 @@
             <td>{{ order.date_complete }}</td>
             <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
             <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
-            </td>
+            <td><a href="{% url 'orders:order_pay' order.id %}">Оплатить</a></td>
         </tr>
         {% endfor %}
 
