--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -7,7 +7,7 @@
 or <a href="{% url 'account:password_change' %}">Сменить пароль</a>.
  </p>
 <p>
-
+<p>Раздел организации <a href="{% url 'account:view_organisation_user' %}">Мои организации</a>
 {% for type in type_print %}
 
 <p>  <a href=" ">{{type.type_print}}</a></p>
