--- a/files/templates/all_files_detail.html
+++ b/files/templates/all_files_detail.html
@@ -8,9 +8,11 @@
                                                 <tr>
                                                     <th scope="col">Изображение</th>
                                                     <th scope="col">Материал</th>
-                                                    <th scope="col">Количество</th>
-                                                    <th scope="col">Стоимость</th>
-                                                    <th scope="col">Юзер:</th>
+                                                    <th scope="col">Кол-во</th>
+                                                    <th scope="col">Размер</th>
+                                                    <th scope="col">images:</th>
+                                                    <th scope="col">FinishWork:</th>
+                                                    <th scope="col">Fields:</th>
                                                 </tr>
                                             </thead>
 
@@ -21,12 +23,12 @@
                                                     <td>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></td>
                                                     <td>{{ product.material }}</td>
                                                     <td>{{ product.quantity }}</td>
-                                                    <td> {{ product.price }} руб.</div>
-                                                    <td> {{ product.Contractor }} </div>
-</td>
+                                                    <td> {{ product.width }} х {{ product.length }}</td>
+                                                    <td> <a href=" {{ product.images }} " </a> ty </td>
+                                                    <td> {{ product.FinishWork }} </td>
+                                                    <td> {{ product.Fields }} </td>
                                                 </tr>
 
-                                           </tr>
 {% endfor %}
 
 
