--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -14,11 +14,11 @@
 <p>
  Please, use the following form to log-in.
  If you don't have an account
- <a href="{% url 'account:register' %}">register here</a>.
+ <a href="{% url 'register' %}">register here</a>.
 </p>
  {% endif %}
  <div class="login-form">
- <form action="{% url 'account:login' %}" method="post">
+ <form action="{% url 'login' %}" method="post">
  {{ form.as_p }}
  {% csrf_token %}
 
