--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -28,9 +28,9 @@
 
  {% if request.user.is_authenticated %}
  Hello {{ request.user.first_name|default:request.user.username }},
- <a href="{% url 'account:logout' %}">Logout</a>
+ <a href="{% url 'logout' %}">Logout</a>
  {% else %}
- <a href="{% url 'account:login' %}">Log-in</a>
+ <a href="{% url 'login' %}">Log-in</a>
  {% endif %}
 
 {% block body %}
@@ -49,9 +49,9 @@
       <div class="col-6 col-md">
         <h5>Профиль</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:edit_profile' %}">Изменить профиль</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:password_change' %}">Сменить пароль</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'account:password_reset' %}">Сбросить пароль</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'edit_profile' %}">Изменить профиль</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_change' %}">Сменить пароль</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'password_reset' %}">Сбросить пароль</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Персонал для разработчиков</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Другой</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Последний раз</a></li>
@@ -64,15 +64,22 @@
             <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_orders'%}">Мои заказы</a></li>
 
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/createitem/">Добавить в заказ</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Последний ресурс</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_orders' %}">Посмотреть все заказы</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>О нас</h5>
+        <h5>Организации</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Команда</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Локация</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Конфиденциальность</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Мои организации</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Добавить организацию</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5>Доставка</h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">рганизации</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Добавить организацию</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
         </ul>
       </div>
