add view all files for work in paid

--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -65,6 +65,7 @@
 
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/orders/createitem/">Добавить в заказ</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_orders' %}">Посмотреть все заказы</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'orders:view_all_files_for_work_in_orders' %}">Посмотреть все файлы для печати</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
