add view all files for work in paid

--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -71,7 +71,7 @@
       <div class="col-6 col-md">
         <h5>Организации</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Мои организации</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="{% url 'view_organisation_user' %}">Мои организации</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Добавить организацию</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Условия</a></li>
         </ul>
