add view all files for work in paid

--- a/files/templates/all_files_detail.html
+++ b/files/templates/all_files_detail.html
@@ -13,6 +13,7 @@
                                                     <th scope="col">images:</th>
                                                     <th scope="col">FinishWork:</th>
                                                     <th scope="col">Fields:</th>
+                                                    <th scope="col">status_product:</th>
                                                 </tr>
                                             </thead>
 
@@ -27,6 +28,7 @@
                                                     <td> <a href=" {{ product.images }} " </a> ty </td>
                                                     <td> {{ product.FinishWork }} </td>
                                                     <td> {{ product.Fields }} </td>
+                                                    <td> {{ product.status_product }} </td>
                                                 </tr>
 
 {% endfor %}
