--- a/orders/templates/view_all_files_for_work_in_orders.html
+++ b/orders/templates/view_all_files_for_work_in_orders.html
@@ -34,9 +34,9 @@
             <td>{{ i.id }}</td>
             <td><a>{% load thumbnail %} <img src="{% thumbnail i.product.images 100x0 %}" class="image-detail"></a></td>
 
-            <td> <a href="/media/{{ i.product }}" </a>Скачать</td>
+            <td> <a href="/media/{{ i.products }}" </a>Скачать</td>
             <td>{{ i.product.material }} </td>
-            <td>{{ i.product.FinishWork }} </td>
+            <td>{{ i.files_product.FinishWork }} </td>
 </tr>
         {% endfor %}
                     </table>
