--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -5,34 +5,41 @@
 
 {% if products.count > 0 %}
     <h2>Список файлов: </h2>
-
-    <table>
-        <thead>
-           <th>Id</th><th>Картинка</th><th>Материал</th><th>Кол-во</th>
-           <th>Размер</th><th>Финишка</th><th>Стоимость</th><th>Дата</th>
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Картинка</th>
+                <th>Материал</th>
+                <th>Кол-во</th>
+                <th>Размер</th>
+                <th>Финишка</th>
+                <th>Стоимость</th>
+                <th>Дата</th>
        </thead>
-        {% for product in products %}
-        <tr>
-            <td>{{ product.id }}</td>
-            <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ product.material }}</td>
-            <td>{{ product.quantity }} шт.</td>
-            <td>{{ product.width }} х {{ product.length }} см.</td>
-            <td>{{ product.FinishWork }}</td>
-            <td>{{ product.price }} руб.</td>
-            <td>{{ product.created_at }}</td>
-
-
-            <td><a href="edit/{{product.id}}">Изменить</a>
-                <a href="delete/{{product.id}}">Удалить</a>
-                <a href="edit/{{product.id}}">Добавить в заказ</a>
-                <input type="checkbox" checked>
-            </td>
-        </tr>
+            <tbody>
+                {% for product in products %}
+                <tr>
+                    <td>{{ product.id }}</td>
+                    <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>
+                    <td>{{ product.material }}</td>
+                    <td>{{ product.quantity }} шт.</td>
+                    <td>{{ product.width }} х {{ product.length }} см.</td>
+                    <td>{{ product.FinishWork }}</td>
+                    <td>{{ product.price }} руб.</td>
+                    <td>{{ product.created_at }}</td>
+                    <td><a href="edit/{{product.id}}">Изменить</a></td>
+                    <td><a href="delete/{{product.id}}">Удалить</a></td>
+                    <td><a href="edit/{{product.id}}">Добавить в заказ</a></td>
+                </tr>
         {% endfor %}
-
+            </tbody>
     </table>
+    </div>
+</div>
+
     {% endif %}
-
-
     {% endblock %}
