--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -5,29 +5,41 @@
 
 {% if Orders.count > 0 %}
     <h2>Список Заказов: </h2>
-
-    <table>
-        <thead>
-           <th>Заказ №</th><th>Total</th><th>Платильщк</th><th>Оплачено</th>
-           <th>Каменты</th><th>Статус</th><th>Дата заказа</th><th>Дата готовности</th>
-       </thead>
-        {% for order in Orders %}
-        <tr>
-            <td>{{ order.id }}</td>
-            <td>{{ order.total_price }} руб. </td>
-            <td>{{ order.organisation_payer }}</td>
-            <td>{{ order.paid }}</td>
-            <td>{{ order.comments }}</td>
-            <td>{{ order.status }}</td>
-            <td>{{ order.created }}</td>
-            <td>{{ order.date_complete }}</td>
-            <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
-            <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
-            <td><a href="{% url 'orders:order_pay' order.id %}">Оплатить</a></td>
-            <td><a href="{% url 'orders:update_order' order.id %}">Редактировать</a></td>
-        </tr>
-        {% endfor %}
-
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Заказ №</th>
+                <th>Total</th>
+                <th>Платильщик</th>
+                <th>Оплачено</th>
+                <th>Каменты</th>
+                <th>Статус</th>
+                <th>Дата заказа</th>
+                <th>Дата готовности</th>
+           </thead>
+            <tbody>
+            {% for order in Orders %}
+            <tr>
+                <td>{{ order.id }}</td>
+                <td>{{ order.total_price }} руб. </td>
+                <td>{{ order.organisation_payer }}</td>
+                <td>{{ order.paid }}</td>
+                <td>{{ order.comments }}</td>
+                <td>{{ order.status }}</td>
+                <td>{{ order.created }}</td>
+                <td>{{ order.date_complete }}</td>
+                <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
+                <td><a href="{% url 'orders:Delete_order' order.id %}">Удалить</a></td>
+                <td><a href="{% url 'orders:order_pay' order.id %}">Оплатить</a></td>
+                <td><a href="{% url 'orders:update_order' order.id %}">Редактировать</a></td>
+            </tr>
+            {% endfor %}
+            </tbody>
     </table>
+    </div>
+</div>
     {% endif %}
     {% endblock %}
