--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
@@ -6,14 +9,9 @@
 {% block body %}
  <h1>Log-in</h1>
  {% if form.errors %}
- <p>
- Your username and password didn't match.
- Please try again.
- </p>
+ <p> Your username and password didn't match.  Please try again. </p>
  {% else %}
-<p>
- Please, use the following form to log-in.
- If you don't have an account
+<p> Please, use the following form to log-in.  If you don't have an account
  <a href="{% url 'register' %}">register here</a>.
 </p>
  {% endif %}
@@ -22,12 +20,8 @@
  {{ form.as_p }}
  {% csrf_token %}
 
-
-
  <input type="hidden" name="next" value="{{ next }}" />
  <p><input type="submit" value="Log-in"></p>
  </form>
-
-
-
 {% endblock %}
+
