--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -1,66 +1,88 @@
 {% extends 'base.html'%}
 <title>{% block title %} {{curent_order}} {% endblock %}</title>
 {% block body %}
-<h3> {{curent_order}}</h3>
+<h3>{{curent_order}}</h3>
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Дата</th>
+                <th>Платильщик</th>
+                <th>Оплата</th>
+                <th>Сумма</th>
+                <th>Статус</th>
+            </thead>
 
-<table>
-        <thead>
-        <th>Дата</th>
-           <th>Платильщик</th><th>Оплата</th>
-           <th>Сумма</th><th>Статус</th>
-       </thead>
-
-        <tr>
-            <td>{{ Orders.created }}</td>
-            <td>{{ Orders.organisation_payer }}</td>
-            <td>{{ Orders.paid }}</td>
-            <td>{{ Orders.total_price }}</td>
-            <td>{{ Orders.status }}</td>
-            <td><a href="{% url 'orders:order_pay' Orders.id %}">Оплатить</a>
-            </td>
-        </tr>
-            </table>
-
-
+            <tr>
+                <td>{{ Orders.created }}</td>
+                <td>{{ Orders.organisation_payer }}</td>
+                <td>{{ Orders.paid }}</td>
+                <td>{{ Orders.total_price }}</td>
+                <td>{{ Orders.status }}</td>
+<!--                <td><a href="{% url 'orders:order_pay' Orders.id %}">Оплатить</a>-->
+                <td><button type="submit" class="btn btn-primary" onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оплатить</button></td>
+            </tr>
+        </table>
+        </tbody>
+    </div>
+</div>
 
 <h5> Файлы которые можно добавить в заказ: </h5>
 
-    <table>
-        <thead>
-           <th>Картинка</th><th>Материал</th><th>Финишная обработка</th>
-           <th>Поля</th><th>Итого</th>
-       </thead>
-
-  {% for item in items %}
-        <tr>
-            <td><a>{% load thumbnail %} <img src="{% thumbnail item.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ item.material }}  руб. </td>
-            <td>{{ item.FinishWork }} руб.</td>
-            <td>{{ item.Fields }}</td>
-            <td>{{ item.price }}</td>
-            <td><a href="/orders/add_item_in_order/{{order_id}}/{{item.id}}">Добавить в заказ</a></td>
-        </tr>
-        {% endfor %}
-                    </table>
-
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Картинка</th>
+                <th>Материал</th>
+                <th>Финишная обработка</th>
+                <th>Поля</th>
+                <th>Итого</th>
+            </thead>
+            <tbody>
+            {% for item in items %}
+            <tr>
+                <td><a>{% load thumbnail %} <img src="{% thumbnail item.images 100x0 %}" class="image-detail"></a></td>
+                <td>{{ item.material }}</td>
+                <td>{{ item.FinishWork }}</td>
+                <td>{{ item.Fields }}</td>
+                <td>{{ item.price }}</td>
+                <td><a href="/orders/add_item_in_order/{{order_id}}/{{item.id}}">Добавить в заказ</a></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 <h5> Файлы в заказе: </h5>
-
-    <table>
-        <thead>
-           <th>Картинка</th><th>Материал</th><th>Финишная обработка</th>
-           <th>Поля</th><th>Итого</th>
-       </thead>
-
-  {% for item in items_in_order %}
-        <tr>
-            <td><a>{% load thumbnail %} <img src="{% thumbnail item.product.images 100x0 %}" class="image-detail"></a></td>
-            <td>{{ item.price_per_item }} руб.</td>
-            <td>{{ item.quantity }}</td>
-            <td>{{ item.total_price }} руб. </td>
-            <td>{{ item.id }} ID </td>
-            <td><a href="/orders/del_item_in_order/{{order_id}}/{{item.id}}">Удалить</a></td>
-        </tr>
-        {% endfor %}
-                    </table>
-
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Картинка</th>
+                <th>Материал</th>
+                <th>Финишная обработка</th>
+                <th>Поля</th>
+                <th>Итого</th>
+            </thead>
+            <tbody>
+            {% for items in items_in_order %}
+            <tr>
+                <td><a>{% load thumbnail %} <img src="{% thumbnail items.product.images 100x0 %}"
+                                                 class="image-detail"></a></td>
+                <td>{{ items.product.material }}</td>
+                <td>{{ items.product.FinishWork }}</td>
+                <td>{{ items.product.Fields }}</td>
+                <td>{{ items.product.price }} руб.</td>
+                <td><a href="/orders/del_item_in_order/{{order_id}}/{{item.id}}">Удалить</a></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 {% endblock %}
